--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,12 +14,14 @@
     "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.4",
+    "@vitejs/plugin-react-refresh": "^1.3.6",
     "country-state-city": "^3.1.2",
     "geonames.js": "^3.0.6",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.41.5",
+    "react-refresh": "^0.14.0",
     "react-router-dom": "^6.8.0",
     "react-select": "^5.7.0",
     "sweetalert2": "^11.7.0",
