--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.4",
     "@vitejs/plugin-react-refresh": "^1.3.6",
+    "axios": "^1.3.4",
     "country-state-city": "^3.1.2",
     "geonames.js": "^3.0.6",
     "prop-types": "^15.8.1",
