--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,9 +22,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.41.5",
+    "react-redux": "^8.0.5",
     "react-refresh": "^0.14.0",
     "react-router-dom": "^6.8.0",
     "react-select": "^5.7.0",
+    "redux": "^4.2.1",
     "sweetalert2": "^11.7.0",
     "sweetalert2-react-content": "^5.0.7"
   },
